--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,5 +30,9 @@ name = "dealer"
 path = "src/dealer/main.rs"
 
 [[bin]]
+name = "server"
+path = "src/server/main.rs"
+
+[[bin]]
 name = "test"
 path = "src/test/main.rs"
