--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["cargo"] }
+derive_more = "0.99.17"
 hex = "0.4.3"
 num = "0.4.1"
 num-derive = "0.4.1"
