--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ hex = "0.4.3"
 num = "0.4.1"
 num-derive = "0.4.1"
 num-traits = "0.2"
+quickcheck = "1.0.3"
 rand = "0.8.5"
 ring = "0.17.8"
 serde = {version = "1.0.198", features = ["derive"]}
