--- a/bridge/Cargo.toml
+++ b/bridge/Cargo.toml
@@ -12,10 +12,12 @@ num = "0.4.1"
 num-derive = "0.4.1"
 num-traits = "0.2"
 omnibridge-language = { path = "../language" }
-quickcheck = "1.0.3"
 rand = "0.8.5"
 ring = "0.17.8"
 serde = {version = "1.0.198", features = ["derive"]}
+
+[dev-dependencies]
+proptest = "1.5.0"
 
 [lib]
 name = "bridge"
